# uvd

./: CMakeLists.txt  README.md  build.sh  minimal-install.sh
debian/: prerm
scripts/: config.sh  download-uv.sh  installer.sh  main.sh  path.sh  utils.sh
